# nnmodel

./: .gitattributes  README.md
src/: CMakeLists.txt
src/nnmodel/: CMakeLists.txt
src/nnmodel/dlib/: CMakeLists.txt  NNModel.cpp  NNModel.hpp  NNModelLayer.cpp  NNModelLayer.hpp  NNModelScaler.cpp  NNModelScaler.hpp  main.cpp
src/nnmodel/dlib/aux/: HDF5Interface.hpp  HDF5Interface.inl
src/nnmodel/eigen/: CMakeLists.txt  NNModel.cpp  NNModel.hpp  NNModelActivationFunctions.cpp  NNModelActivationFunctions.hpp  NNModelLayer.cpp  NNModelLayer.hpp  NNModelScaler.cpp  NNModelScaler.hpp  main.cpp
src/nnmodel/eigen/aux/: HDF5Interface.cpp  HDF5Interface.hpp  HDF5Interface.inl
